[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/punch_big.wav" type="AudioStream" id=1]
[ext_resource path="res://Player/punch.wav" type="AudioStream" id=2]
[ext_resource path="res://Levels/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://Enemies/hit_ground_01.wav" type="AudioStream" id=4]
[ext_resource path="res://Enemies/hit_ground_02.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/start_game.wav" type="AudioStream" id=6]
[ext_resource path="res://UI/menu_select.wav" type="AudioStream" id=7]

[node name="SoundManager" type="Node"]
script = ExtResource( 3 )

[node name="PunchHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0
pitch_scale = 1.25

[node name="PunchHitBigSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -8.0
pitch_scale = 1.5

[node name="HitGroundSingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0

[node name="HitGroundDouble" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0

[node name="StartGameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0

[node name="MenuSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
